# sandbox-grpc-mongo-elastic

./: .isort.cfg  Makefile  pyproject.toml  readme.md
client/: Dockerfile  main.py  recommendations_pb2.py
protobufs/: recommendations.proto
server/: Dockerfile  main.py  recommendations_pb2_grpc.py
server/app/: api.py  app.py  elastic.py  mongo.py  settings.py
server/search/: repository.py  schema.py
server/services/: book_crud.py
server/storage/: repositories.py  schemas.py
